--- a/src/paysure.html
+++ b/src/paysure.html
@@ -105,8 +105,7 @@
 
             </h1>
 
-            <div data-aos="zoom-in" data-aos-duration="1000"
-                class="case-studies w-full flex items-center py-5 sm:py-6 lg:py-7">
+            <div class="case-studies w-full flex items-center py-5 sm:py-6 lg:py-7">
                 <ul
                     class="case-study-list font-sf w-full text-xs sm:text-sm lg:text-base xl:text-lg 2xl:text-xl text-primary flex justify-between align-center">
                     <li>UX Reasearch</li>
@@ -120,9 +119,9 @@
         <div
             class="theme-toggle-container absolute right-8 sm:right-14 md:right-16 lg:right-24 xl:right-28 2xl:right-32 flex justify-end">
             <button
-                class="toggle-btn relative rounded-full flex justify-center items-center w-10 lg:w-14 xl:w-16 h-10 lg:h-14 xl:h-16 z-50 bg-dark dark:bg-white">
+                class="toggle-btn relative rounded-full flex justify-center items-center w-10 lg:w-12 xl:w-14 2xl:w-16 h-10 lg:h-12 xl:h-14 2xl:h-16 z-50 bg-dark dark:bg-white">
                 <div class="cont absolute sun invisible">
-                    <svg class="w-5 lg:w-7 xl:w-8" viewBox="0 0 256 256" xml:space="preserve">
+                    <svg class="w-5 lg:w-6 xl:w-7 2xl:w-8" viewBox="0 0 256 256" xml:space="preserve">
                         <desc>Created with Fabric.js 1.7.22</desc>
                         <defs>
                         </defs>
@@ -203,7 +202,7 @@
                 </div>
 
                 <div class="cont absolute moon invisible">
-                    <svg class="w-5 lg:w-7 xl:w-8" viewBox="0 0 256 256" xml:space="preserve">
+                    <svg class="w-5 lg:w-6 xl:w-7 2xl:w-8" viewBox="0 0 256 256" xml:space="preserve">
                         <desc>Created with Fabric.js 1.7.22</desc>
                         <defs>
                         </defs>
@@ -223,12 +222,12 @@
 
         <section class="paysure mt-10 lg:mt-20 xl:mt-32">
             <div class="overview space-y-5 sm:space-y-6 2xl:space-y-7">
-                <h3 data-aos="fade-right" data-aos-duration="800"
+                <h3
                     class="overview-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Overview
                 </h3>
 
-                <p data-aos="fade-right" data-aos-duration="800" data-aos-delay="300"
+                <p
                     class="overview-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     Pay sure is a uitility payment playform that brings daily life expenses and transactions close to
                     its users. It provides
@@ -237,12 +236,12 @@
             </div>
 
             <div class="the-problem mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <h3 data-aos="fade-right" data-aos-duration="800"
+                <h3
                     class="the-problem-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     The problem
                 </h3>
 
-                <p data-aos="fade-left" data-aos-duration="800"
+                <p
                     class="the-problem-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10">
                     Keeping up with expenses could be very painstaking due to the number of needs we have in our daily
                     life, it is only
@@ -253,27 +252,26 @@
             </div>
 
             <div class="goals mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <h3 data-aos="fade-right" data-aos-duration="800"
-                    class="goal-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <h3 class="goal-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Goals
                 </h3>
 
                 <ol
                     class="list-decimal ml-4 font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:ml-5">
-                    <li data-aos="fade-right" data-aos-duration="800">Create an all in one payment platform for all
+                    <li>Create an all in one payment platform for all
                         bills and expenses.</li>
-                    <li data-aos="fade-right" data-aos-duration="800" data-aos-delay="300">Design a more user friendly
+                    <li>Design a more user friendly
                         design that top competition.</li>
                 </ol>
             </div>
 
             <div class="design-process mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <h3 data-aos="fade-right" data-aos-duration="800"
+                <h3
                     class="design-process-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Design
                     process</h3>
 
-                <div data-aos="zoom-in-right" data-aos-duration="1000" class="design-process-image">
+                <div class="design-process-image">
                     <a href="../assets/images/Paysure Design Process.png"><img class="rounded-2xl lg:rounded-3xl w-full"
                             class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure Design Process.png" alt=""
                             class="lg:mt-8"></a>
@@ -281,23 +279,23 @@
             </div>
 
             <div class="userflow mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <h3 data-aos="fade-right" data-aos-duration="800"
+                <h3
                     class="userflow-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     User flow</h3>
 
-                <div data-aos="zoom-in-right" data-aos-duration="1000" class="userflow-images">
+                <div class="userflow-images">
                     <a href="../assets/images/Paysure User Flow.png"><img class="rounded-2xl lg:rounded-3xl w-full"
                             class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure User Flow.png" alt=""></a>
                 </div>
             </div>
 
             <div class="wireframes mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <h3 data-aos="fade-right" data-aos-duration="800"
+                <h3
                     class="wireframes-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Wireframes
                 </h3>
 
-                <p data-aos="fade-left" data-aos-duration="800"
+                <p
                     class="wireframes-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
                     Wireframes help me focus on key functions, elements, and actions before starting the visual design.
                     I created
@@ -305,12 +303,12 @@
                 </p>
 
                 <div class="wireframes-image space-y-3 lg:space-y-3">
-                    <div data-aos="zoom-in-right" data-aos-duration="1000" class="wireframes-image">
+                    <div class="wireframes-image">
                         <a href="../assets/images/Paysure Wireframe 1.png"><img
                                 class="rounded-2xl lg:rounded-3xl w-full" src="../assets/images/Paysure Wireframe 1.png"
                                 alt=""></a>
                     </div>
-                    <div data-aos="zoom-in-left" data-aos-duration="1000" class="wireframes-image">
+                    <div class="wireframes-image">
                         <a href="../assets/images/Paysure Wireframe 2.png"><img
                                 class="rounded-2xl lg:rounded-3xl w-full" src="../assets/images/Paysure Wireframe 2.png"
                                 alt=""></a>
@@ -319,25 +317,24 @@
             </div>
 
             <div class="colors-and-typography mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <h3 data-aos="fade-right" data-aos-duration="800"
+                <h3
                     class="colors-and-typography-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Colors and
                     Typography</h3>
 
-                <p data-aos="fade-up" data-aos-duration="800"
+                <p
                     class="colors-and-typography-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
                     Designing the visuals became very interesting after being able to validate the wireframes with
                     potential testers of the app. I proceeded to design a simple design style guide for the application.
                 </p>
 
                 <div class="colors-and-typography-image space-y-3 lg:space-y-3">
-                    <div data-aos="zoom-in-up" data-aos-duration="1000" class="colors-and-typography-image">
+                    <div class="colors-and-typography-image">
                         <a href="../assets/images/Paysure Colors.png"><img class="rounded-2xl lg:rounded-3xl w-full"
                                 class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure Colors.png" alt=""></a>
                     </div>
 
-                    <div data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="300"
-                        class="colors-and-typography-image">
+                    <div class="colors-and-typography-image">
                         <a href="../assets/images/Paysure Texts.png"><img class="rounded-2xl lg:rounded-3xl w-full"
                                 class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure Texts.png" alt=""></a>
                     </div>
@@ -345,39 +342,39 @@
             </div>
 
             <div class="visual-design mt-24 md:mt-32 xl:mt-40 lg:my-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <h3 data-aos="fade-right" data-aos-duration="800"
+                <h3
                     class="visual-design-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Visual
                     Design</h3>
 
-                <p data-aos="fade-right" data-aos-duration="800" data-aos-delay="300"
+                <p
                     class="visual-design-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     After several rounds of iterations on the wireframe, we designed the high-fidelity screens.
                 </p>
 
                 <div class="visual-design-images w-full space-y-3 lg:space-y-3">
-                    <div data-aos="zoom-in-right" data-aos-duration="1000" class="paysure-visual-design-container">
+                    <div class="paysure-visual-design-container">
                         <a href="../assets/images/Paysure Visual Design 1.png">
                             <img class="rounded-2xl lg:rounded-3xl w-full"
                                 src="../assets/images/Paysure Visual Design 1.png" alt="">
                         </a>
                     </div>
 
-                    <div data-aos="zoom-in-left" data-aos-duration="1000" class="paysure-visual-design-container">
+                    <div class="paysure-visual-design-container">
                         <a href="../assets/images/Paysure Visual Design 2.png">
                             <img class="rounded-2xl lg:rounded-3xl w-full"
                                 src="../assets/images/Paysure Visual Design 2.png" alt="">
                         </a>
                     </div>
 
-                    <div data-aos="zoom-in-right" data-aos-duration="1000" class="paysure-visual-design-container">
+                    <div class="paysure-visual-design-container">
                         <a href="../assets/images/Paysure Visual Design 3.png">
                             <img class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure Visual Design 3.png"
                                 alt="">
                         </a>
                     </div>
 
-                    <div data-aos="zoom-in-left" data-aos-duration="1000" class="paysure-visual-design-container">
+                    <div class="paysure-visual-design-container">
                         <a href="../assets/images/Paysure Visual Design 4.png">
                             <img class="rounded-2xl lg:rounded-3xl w-full"
                                 src="../assets/images/Paysure Visual Design 4.png" alt="">
@@ -387,12 +384,12 @@
             </div>
 
             <div class="conclusion mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <h3 data-aos="fade-right" data-aos-duration="800"
+                <h3
                     class="conclusion-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Conclusion
                 </h3>
 
-                <p data-aos="fade-up" data-aos-duration="800" data-aos-delay="300"
+                <p
                     class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
                     The UI design was framed based on data collected over a long period of time and multiple test
                     sessions. The design was
@@ -406,8 +403,7 @@
         </section>
 
         <div class="navigators flex justify-center mt-10 lg:mt-48">
-            <div data-aos="zoom-in" data-aos-duration="1000"
-                class="navigators-container w-1/3 flex justify-start items-center">
+            <div class="navigators-container w-1/3 flex justify-start items-center">
                 <a href="cryptly.html">
                     <div class="navigator-right flex justify-center items-center">
                         <i class="fas fa-chevron-left mr-5 text-black dark:text-white"></i>
@@ -432,7 +428,7 @@
                         class="got-an-idea inv font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
                         Got an idea?
                     </h1>
-    
+
                     <p>
                         <a class="lets-talk font-sf text-black before:border-t before:border-b before:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
                             href="#">
@@ -440,18 +436,19 @@
                         </a>
                     </p>
                 </div>
-    
+
                 <div
                     class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base 2xl:text-lg">
-                    <div class="grid grid-cols-4 gap-y-3 xl:gap-y-7 text-xs lg:text-base items-center overflow-y-hidden">
+                    <div
+                        class="grid grid-cols-4 gap-y-3 xl:gap-y-7 text-xs lg:text-base items-center overflow-y-hidden">
                         <a data-aos="fade-up" class="instagram-footer-link" href="https://instagram.com/ozenua_uiux"
                             target="blank">Instagram</a>
                         <a data-aos="fade-up" data-aos-delay="100" class="youtube-footer-link" href="#">Youtube</a>
-                        <a data-aos="fade-up" data-aos-delay="200" class="dribble-footer-link"
-                            href="https://dribbble.com/ozenua_uiux" target="blank">Dribble</a>
-                        <a data-aos="fade-up" data-aos-delay="300" class="linkedin-footer-link"
+                        <a data-aos="fade-up" class="dribble-footer-link" href="https://dribbble.com/ozenua_uiux"
+                            target="blank">Dribble</a>
+                        <a data-aos="fade-up" class="linkedin-footer-link"
                             href="https://www.linkedin.com/in/ozenua-oluwatobi/" target="blank">LinkedIn</a>
-                        <a data-aos="fade-up" data-aos-delay="400" data-aos-offset="100" class="behance-footer-link"
+                        <a data-aos="fade-up" data-aos-offset="100" class="behance-footer-link"
                             href="https://behance.net/ozenua_uiux" target="blank">Behance</a>
                         <a data-aos="fade-up" data-aos-delay="500" data-aos-offset="100" class="twitter-footer-link"
                             href="https://twitter.com/ @ozenua_uiux">Twitter</a>
