--- a/src/cryptly.html
+++ b/src/cryptly.html
@@ -82,7 +82,7 @@
                     <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs 2xl:text-sm">
                         <li><a class="before:black dark:before:bg-white" href="#">CONTACT ME</a></li>
                         <li><a class="before:black dark:before:bg-white" href="#">CASES</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#">RESUME</a></li>
+                        <li><a class="before:black dark:before:bg-white" href="#">ABOUT ME</a></li>
                     </ul>
                 </div>
 
