--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -78,11 +78,11 @@
                     </a>
                 </div>
 
-                <div class="navlist py-1 overflow-y-hidden hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
+                <div class="navlist py-1 opacity-0 hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
                     <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs 2xl:text-sm">
-                        <li><a class="before:black dark:before:bg-white" href="#">CONTACT ME</a></li>
+                        <li><a class="before:black dark:before:bg-white" href="#footer">CONTACT ME</a></li>
                         <li><a class="before:black dark:before:bg-white" href="#">CASES</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#">RESUME</a></li>
+                        <li><a class="before:black dark:before:bg-white" href="#">ABOUT ME</a></li>
                     </ul>
                 </div>
 
@@ -105,7 +105,7 @@
 
             </h1>
 
-            <div class="case-studies w-full flex items-center py-5 sm:py-6 lg:py-7">
+            <div class="case-studies transform scale-50 opacity-0 w-full flex items-center py-5 sm:py-6 lg:py-7">
                 <ul
                     class="case-study-list font-sf w-full text-xs sm:text-sm lg:text-base xl:text-lg 2xl:text-xl text-primary flex justify-between align-center">
                     <li>UX Reasearch</li>
@@ -667,23 +667,29 @@
             duration: 2
         })
 
-        gsap.to('.logo', {
+        gsap.to('.logo, .navlist', {
+            duration: 1,
             opacity: 1,
             delay: 2,
         })
 
-        gsap.to('nav .nav-container .navlist ul li', {
-            // duration: 1,
-            y: 0,
-            stagger: 0.3,
-            ease: 'back',
-            delay: 2
+        gsap.to('.case-studies', {
+            duration: 1,
+            scale: 1,
+            delay: 2,
+            opacity: 1,
+            // ease: 'back'
         })
+
+        // gsap.to('nav .nav-container .navlist ul li', {
+        //     opacity: 1,
+        //     delay: 2,
+        // })
     </script>
     <script>
-        window.addEventListener('load', setTimeout(() => {
-            AOS.init();
-        }, 2000));
+        // window.addEventListener('load', setTimeout(() => {
+        //     AOS.init();
+        // }, 2000));
     </script>
 
 </body>
